<resources>
    <string name="app_name">GitExcercise</string>
    <string name="hint_email">Email <font color="red">*</font></string>
    <string name="hint_password">Password <font color="red">*</font></string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="hint_name">Full Name</string>
    <string name="text_register_now">Register now</string>
    <string name="text_login_now">Login now</string>
    <string name="error_required_fileds">Please fill required details!!</string>
    <string name="error_invalid_credentials">Invalid credentials!!</string>
    <string name="text_send_email">Send Email</string>
    <string name="error_invalid_email">Invalid email!!</string>
    <string name="text_forgot_password">Forgot Password</string>
    <string name="text_email">"Email: "</string>
    <string name="text_name">"Name: "</string>
    <string name="text_password">"Password: "</string>
    <string name="edit_profile">Edit profile</string>
    <string name="text_save_changes">Save changes</string>
</resources>